--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - name: Echo
+        run: echo "AWS_REGION - ${{ secrets.AWS_REGION }}"
           
       - name: Configure AWS credentials
         id: aws-credentials
