--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           persist-credentials: false
       - name: Echo
-        run: echo "AWS_REGION - ${{ secrets.AWS_REGION }}"
+        run: echo "AWS_REGION - ${{ secrets.AWS_REGION }} ### AWS_ACCESS_KEY_ID - ${{ secrets.AWS_ACCESS_KEY_ID }}"
           
       - name: Configure AWS credentials
         id: aws-credentials
