--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -10,8 +10,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+          
       - name: Echo
-        run: echo "AWS_REGION - ${{ secrets.AWS_REGION }} ||| AWS_ACCESS_KEY_ID - ${{ secrets.AWS_ACCESS_KEY_ID }}"
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: echo "AWS_REGION - $AWS_REGION ||| AWS_ACCESS_KEY_ID - ${{ var.AWS_REGION }}"
           
       - name: Configure AWS credentials
         id: aws-credentials
