--- a/.github/workflows/deploy-to-ecr.yml
+++ b/.github/workflows/deploy-to-ecr.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Echo
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: echo "AWS_REGION - $AWS_REGION ||| AWS_ACCESS_KEY_ID - ${{ var.AWS_REGION }}"
+        run: echo "AWS_REGION - $AWS_REGION ||| AWS_ACCESS_KEY_ID - ${{ vars.AWS_REGION }}"
           
       - name: Configure AWS credentials
         id: aws-credentials
